--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=tiger
 
 spring.mvc.view.prefix=/WEB-INF/views
 spring.mvc.view.suffix=.jsp
+
+mybatis.configuration.map-underscore-to-camel-case=true
